--- a/Julfiker_Portfolio/Views/Home/Publications.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Publications.cshtml
@@ -115,6 +115,13 @@
                 “Defending Characteristics and Attribution Analysis for Phishing Attacks”
             </a><br />
             <span class="text-secondary">CSCI’23 (CSCI-RTCW) — Published in IEEE Xplore</span>
+ <!-- Collapsible Abstract -->
+            <div class="collapse mt-2" id="abstract1">
+                <div class="text-light small">
+                    <strong>Abstract—</strong>In recent years, phishing attacks have become widespread cyber threats affecting people, governments, private sectors, service providers, and internet users globally. Attackers collect personal information about the targeted victims through emails or fake websites, such as user account login details, bank card numbers, etc. The victim is manipulated using a combination of technical and social engineering techniques. This paper provides a review of recent existing research on various phishing attacks, including HTTPS phishing, spear phishing, whale phishing, pop-up phishing, and email spoofing hacking. It also explores how to identify such attacks using Artificial Intelligence (AI) techniques, including Machine Learning and Deep Learning. Additionally, the paper investigates the benefits and drawbacks of different defense approaches and provides an overview of the challenges related to phishing attack detection.
+
+                </div>
+            </div>
         </li>
 
         <li class="list-group-item bg-dark text-light border border-warning mb-2 rounded">
