--- a/Julfiker_Portfolio/Views/Home/Contact.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Contact.cshtml
@@ -19,7 +19,7 @@
                     </li>
                     <li class="mb-3">
                         <i class="bi bi-geo-alt-fill text-warning me-2"></i>
-                        Location: <span class="contact-text">Dunbar, WV, USA</span>
+                        Location: <span class="contact-text">Charleston, WV, USA</span>
                     </li>
                     <li class="mb-3">
                         <i class="bi bi-linkedin text-warning me-2"></i>
