--- a/Julfiker_Portfolio/Views/Home/Index.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Index.cshtml
@@ -68,11 +68,11 @@
 <div class="container text-center my-5">
     <div class="row">
         <div class="col">
-            <h2 class="counter display-5 fw-bold text-warning" data-target="5+">0</h2>
+            <h2 class="counter display-5 fw-bold text-warning" data-target="5">0</h2>
             <p class="text-light">Years of Experience</p>
         </div>
         <div class="col">
-            <h2 class="counter display-5 fw-bold text-warning" data-target="15+">0</h2>
+            <h2 class="counter display-5 fw-bold text-warning" data-target="15">0</h2>
             <p class="text-light">Projects Completed</p>
         </div>
         <div class="col">
