--- a/Julfiker_Portfolio/Views/Home/Education.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Education.cshtml
@@ -44,11 +44,16 @@
                                 Dr. Ali Al-Sinayyid
                             </a>
                         </p>
-                        <p class="text-light m-0">
-                            <strong>Co-Supervisor:</strong>
-                            <span class="text-warning">Dr. Heng Wu</span>
-                            <span class="text-secondary">(in memoriam)</span>
-                        </p>
+           <p class="text-light m-0">
+    <strong>Co-Supervisor:</strong>
+    <a href="https://researchworks.laverne.edu/esploro/profile/heng_wu/overview?institution=01UOLV_INST" 
+       target="_blank" 
+       class="text-warning text-decoration-none">
+       Dr. Heng Wu
+    </a>
+    <span class="text-secondary">(in memoriam)</span>
+</p>
+
                     </div>
 
                     <div class="col-12 col-md-6">
